ci: add dummy test command

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "rimraf dist && tsc -d"
+    "build": "rimraf dist && tsc -d",
+    "test": "echo No tests..."
   },
   "dependencies": {
     "cross-spawn": "5.1.0",
