--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "graphql-boilerplate-install",
   "version": "0.0.0",
-  "main": "dist/index.ts",
+  "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "repository": "git@github.com:graphql-boilerplates/graphql-boilerplate-install.git",
   "author": "Johannes Schickling <schickling.j@gmail.com>",
