--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "echo No tests..."
   },
   "peerDependencies": {
-    "graphcool": "1.0.0-alpha3.3.5"
+    "graphcool": "1.0.0-beta4.0.6"
   },
   "dependencies": {
     "cross-spawn": "5.1.0",
